[package]
name = "mdterm"
version = "0.1.0"
edition = "2024"
description = "A terminal-based Markdown viewer with syntax highlighting and interactive navigation"
license = "MIT"
repository = "https://github.com/bahdotsh/mdterm"
keywords = ["markdown", "terminal", "viewer", "tui", "cli"]
categories = ["command-line-utilities"]

[dependencies]
pulldown-cmark = "0.11"
crossterm = "0.28"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
open = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
